--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gerenciador de Despesas</title>
-    <link rel="stylesheet" href="css/reset.css">
+    <title>Expense Tracker - Controle Financeiro</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -81,3 +80,39 @@
                         <label for="type">Tipo</label>
                         <select id="type" required>
                             <option value="income">➕ Receita</option>
+                            <option value="expense">➖ Despesa</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="date">Data</label>
+                        <input type="date" id="date" required>
+                    </div>
+                </div>
+
+                <button type="submit" class="btn-submit">Adicionar Transação</button>
+            </form>
+        </section>
+
+        <!-- Filtros -->
+        <section class="filters">
+            <button class="filter-btn active" data-filter="all">Todas</button>
+            <button class="filter-btn" data-filter="income">Receitas</button>
+            <button class="filter-btn" data-filter="expense">Despesas</button>
+        </section>
+
+        <!-- Lista de Transações -->
+        <section class="transactions-section">
+            <h2>Histórico de Transações</h2>
+            <ul id="transactionsList" class="transactions-list">
+                <!-- Transações aparecerão aqui via JavaScript -->
+            </ul>
+            <p id="emptyMessage" class="empty-message">
+                Nenhuma transação cadastrada ainda. Adicione sua primeira transação acima!
+            </p>
+        </section>
+
+    </div>
+
+    <script src="js/app.js"></script>
+</body>
+</html>
